org_unpackaged/standard/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Associate</fullName>
        <description>This is the sales process for associates</description>
        <isActive>true</isActive>
        <values>
            <fullName>Deferred</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Sold</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Enterprise</fullName>
        <description>The sales cycle statuses for a MBO ES Client</description>
        <isActive>true</isActive>
        <values>
            <fullName>Can%27t Identify</fullName>
        </values>
        <values>
            <fullName>Identified</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account cannot be a Person.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Company, Rolodex</value>
            </filterItems>
            <infoMessage>Please set a company as the account.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Employees)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alumni_Referrer__c</fullName>
        <label>Alumni Referrer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignmentLength__c</fullName>
        <inlineHelpText>In Months</inlineHelpText>
        <label>Estimated Length of 1st Assignment</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssociateNumber__c</fullName>
        <description>Updated by Business Center, pushed to Access</description>
        <inlineHelpText>The Business Center ID number for the associate</inlineHelpText>
        <label>Associate Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Status__c</fullName>
        <description>Used to allow the MBO system to update where the associate is in their life cycle</description>
        <inlineHelpText>Updated by the MBO system to display where the associate is in their life cycle</inlineHelpText>
        <label>Associate Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled (old)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending (old)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AttributeAssociateNewsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The attribute panel for this communication. True if the MBO Partners wants to send the record this type of communication.</description>
        <label>Attribute Associate Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttributeHolidayGreeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The attribute panel for this communication. True if the MBO Partners wants to send the record this type of communication.</description>
        <label>Attribute Holiday Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttributeICB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The attribute panel for this communication. True if the MBO Partners wants to send the record this type of communication.</description>
        <label>Attribute Consultant Brief</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttributeIndustryConference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The attribute panel for this communication. True if the MBO Partners wants to send the record this type of communication.</description>
        <label>Attribute Industry Conferences</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttributeNetworkingEvents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The attribute panel for this communication. True if the MBO Partners wants to send the record this type of communication.</description>
        <label>Attribute Networking Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttributePANews__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The attribute panel for this communication. True if the MBO Partners wants to send the record this type of communication.</description>
        <label>Attribute Press Announcements/News</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttributeSoI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The attribute panel for this communication. True if the MBO Partners wants to send the record this type of communication.</description>
        <label>Attribute State of Independence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttributeWebinars__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The attribute panel for this communication. True if the MBO Partners wants to send the record this type of communication.</description>
        <label>Attribute Webinars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_Rate_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures if the bill rate API was submitted and Pardot has not taken its actions yet.</description>
        <label>Bill Rate Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field is used to collect the comments from a lead from our website</description>
        <inlineHelpText>Displays the comments expressed by the record when they completed the webform</inlineHelpText>
        <label>Web Form Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_size__c</fullName>
        <description>Used to explain how large the company size is</description>
        <inlineHelpText>This shows the size of the company this contact works at</inlineHelpText>
        <label>Company size</label>
        <picklist>
            <picklistValues>
                <fullName>Large Enterprise (Fortune 1000 or equivalent)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large organization (Fortune 1000 or equivalent)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Create_Work_Status_Call_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Work Status Call Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EM_Email__c</fullName>
        <formula>Enrollment_Manager__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_FName__c</fullName>
        <formula>Enrollment_Manager__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EM FName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_LName__c</fullName>
        <formula>Enrollment_Manager__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EM LName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_LinkedIn_Profile__c</fullName>
        <formula>Enrollment_Manager__r.LinkedIn_Profile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EM LinkedIn Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_TTLink__c</fullName>
        <formula>Enrollment_Manager__r.TimeTrade_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EM TTLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employed_at_consulting_or_staffing_firm__c</fullName>
        <label>Employed at consulting or staffing firm</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enrollment_Checklists_with_Forecasting__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Enrollment Checklists with Forecasting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrollment_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the enrollment code the EM decides this associate needs</description>
        <inlineHelpText>Reference the enrollment code to be used for this associate</inlineHelpText>
        <label>Enrollment Code</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please look for an enrollment code for that client.</errorMessage>
            <filterItems>
                <field>Enrollment_Code__c.rs_company__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Referring_Client__c</valueField>
            </filterItems>
            <filterItems>
                <field>Enrollment_Code__c.rs_company__r.Id</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Enrollment_Code__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enrollment_Manager__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Allows the user to reference the EM for this record</description>
        <inlineHelpText>Reference the EM for this record</inlineHelpText>
        <label>Enrollment Manager</label>
        <referenceTo>My_Biz_Office_User__c</referenceTo>
        <relationshipLabel>EM Leads</relationshipLabel>
        <relationshipName>EM_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enterprise_Associate_Suppression__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enterprise Associate Suppression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Anyone who wants to receive communication on MBO events will have this field as True</description>
        <inlineHelpText>True = opted in to receive MBO Event Communications</inlineHelpText>
        <label>Event Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpectedBilling__c</fullName>
        <label>Expected Billings 1st 90 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fit_for_auto_merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fit for auto-merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Force_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Source__c</fullName>
        <description>Used to store information about the form this record completed</description>
        <inlineHelpText>Displays the form this record submitted when entered into our system: Is MBO right for me; Partners Talk to Us; Bill Rate Calculator; ES Talk to Us</inlineHelpText>
        <label>Form Source</label>
        <picklist>
            <picklistValues>
                <fullName>Is MBO Right For Me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners Talk To Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES Talk To Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landing Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declare Your Independence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_College_Degree__c</fullName>
        <label>Has College Degree</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_LLC_or_S_Corp__c</fullName>
        <inlineHelpText>Has set up some sort of business entity</inlineHelpText>
        <label>Has Business Structure</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_need_for_business_insurance__c</fullName>
        <inlineHelpText>Interested in protecting their practice, not totally driven by a client requirement</inlineHelpText>
        <label>Seeking/Interested in Business Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Heard_AD__c</fullName>
        <description>Allows the user to enter the specific data of how they heard of us</description>
        <inlineHelpText>Enter the specifics of how the record heard of us</inlineHelpText>
        <label>How Heard Additional Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_Heard__c</fullName>
        <description>Allows the user to select the source of where the record first discovered MBO</description>
        <inlineHelpText>Select where this record first discovered MBO</inlineHelpText>
        <label>How Did You Hear About Us?</label>
        <picklist>
            <picklistValues>
                <fullName>From a client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From a friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News or Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar or Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center for Human Capital Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Capital Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sourcing Interest Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staffing Industry Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YouTube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zintro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Ad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ignore_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <description>Admin field; a code to identify where a lead came from</description>
        <inlineHelpText>a code to identify where a lead came from (Hidden)</inlineHelpText>
        <label>Import Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Q1__c</fullName>
        <label>Initial Q1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Q2__c</fullName>
        <label>Initial Q2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Q3__c</fullName>
        <label>Initial Q3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Consultant Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I need help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <label>Expected 1st Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Q1__c</fullName>
        <label>Last Q1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Q2__c</fullName>
        <label>Last Q2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Q3__c</fullName>
        <label>Last Q3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadSourceData__c</fullName>
        <inlineHelpText>Add more specific information of how this record was created.</inlineHelpText>
        <label>Lead Source Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MBOAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to grant the lead access to MBO Access.</description>
        <label>MBO Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBORecordId__c</fullName>
        <description>This is the record ID from the Person table in the MBO system.</description>
        <externalId>true</externalId>
        <label>MBO Record Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBO_ID__c</fullName>
        <externalId>true</externalId>
        <label>MBO ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MBO_Partners_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for the newsletter with sign up on the mbopartners.com website</description>
        <inlineHelpText>Flag for the newsletter with sign up on the mbopartners.com website</inlineHelpText>
        <label>MBO Partners Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSP_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSP Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (MSP Client)</relationshipLabel>
        <relationshipName>Leads_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Most Recent Enrollment</label>
        <referenceTo>Enrollment__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Needs_Health_Benefits__c</fullName>
        <label>Seeking/Interested in Health Benefits</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_time_to_do_non_billable_work__c</fullName>
        <inlineHelpText>Too busy to have interest in/time to dedicate to back office administration</inlineHelpText>
        <label>No time to do non-billable work</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OptInAssociateNewsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The subscription panel for the Associate Newsletter - does the customer want to receive this communication. Garrett Zaino 4/11/2012</description>
        <label>Opt-In Associate Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptInHolidayGreeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The subscription panel for receiving holiday greetings. True if the customer wants to receive communications about this.</description>
        <label>Opt-In Holiday Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptInICB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The subscription choice for the Consultant Brief. True if the customer wants to receive this communication.</description>
        <label>Opt-In Consultant Brief</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptInIndustryConference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The subscription panel for industry conferences. True if the record wants to hear about major industry conference we are attending, sponsoring, or hosting.</description>
        <label>Opt-In Industry Conferences</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptInNetworkingEvents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The subscription panel for Networking Events. True if the customer wants to receive communication about this.</description>
        <label>Opt-In Networking Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptInPANews__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The subscription panel for press announcements and news. True if the record wants to receive communication about this.</description>
        <label>Opt-In Press Announcements/News</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptInSoI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The subscription panel for the State of Independence. True if the customer wants to receive communications about this.</description>
        <label>Opt-In State of Independence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptInWebinars__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The subscription panel for the MBO Partners Webinar Series. True if the customer wants to receive communication about this.</description>
        <label>Opt-In Webinars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Assigned_Date_Time__c</fullName>
        <label>Owner Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner_Assigned_Date__c</fullName>
        <label>Owner Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <description>The email address of the owner of the record</description>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_First_Name__c</fullName>
        <description>The first name of the owner of the record</description>
        <formula>Owner:User.FirstName</formula>
        <label>Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Landing_Page__c</fullName>
        <description>The landing page url of the owner of the record</description>
        <formula>Owner:User.Landing_Page__c</formula>
        <label>Owner Landing Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Last_Name__c</fullName>
        <description>The last name of the owner of the record</description>
        <formula>Owner:User.LastName</formula>
        <label>Owner Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_LinkedIn__c</fullName>
        <description>The LinkedIn url of the owner of the record</description>
        <formula>Owner:User.LinkedIn_URL__c</formula>
        <label>Owner LinkedIn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Phone__c</fullName>
        <description>The desk phone number of the owner of the record</description>
        <formula>Owner:User.Phone</formula>
        <label>Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Time_Trade__c</fullName>
        <description>The time trade url of the owner of the record</description>
        <formula>Owner:User.fs_tTLink__c</formula>
        <label>Owner Time Trade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Title__c</fullName>
        <description>The title of the owner of the record</description>
        <formula>Owner:User.Title</formula>
        <label>Owner Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <description>Allows the user to select the persona for this record</description>
        <inlineHelpText>Please select the main persona for this record www.mbopartners.com</inlineHelpText>
        <label>Persona</label>
        <picklist>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioned Professionals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freelancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>